--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,9 @@ repo_url: https://github.com/lnxusr1/kenzy/
 theme: 
     name: readthedocs
     highlightjs: true
+    prev_next_buttons_location: none
+    titles_only: true
+    collapse_navigation: false
 
 nav:
     - Overview: 'index.md'
