--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -10,3 +10,5 @@ include src/kenzy/skills/TellDateTimeSkill/vocab/en_us/*.*
 include src/kenzy/panel/resources/fonts/*.ttf
 include src/kenzy/panel/resources/images/*.svg
 include src/kenzy/web/*.*
+include src/kenzy/skills/*/*.py
+include src/kenzy/skills/*/vocab/*/*.*
