Unknown face handling

--- a/examples/watcher.yml
+++ b/examples/watcher.yml
@@ -1,16 +1,16 @@
 type: kenzy.image
 
 component: 
-  orientation:          0
-  detectFaces:          true
-  detectObjects:        true
-  detectMotion:         true
-  imageMarkupFaces:     true
-  imageMarkupObjects:   true
-  imageMarkupMotion:    true
-  scaleFactor:          1.0
-  defaultFaceName:      "Unknown"
-  faceModel:            "hog"
+  orientation:              0
+  detectFaces:              true
+  detectObjects:            true
+  detectMotion:             true
+  imageMarkupFaces:         true
+  imageMarkupObjects:       true
+  imageMarkupMotion:        true
+  scaleFactor:              1.0
+  defaultFaceName:          "Unknown"
+  faceModel:                "hog"
   faceFontColor:
     - 255
     - 255
@@ -19,8 +19,8 @@ component:
     - 0
     - 0
     - 255
-  showFaces:            true
-  objModelType:         "ssd"
+  showFaces:                true
+  objModelType:             "ssd"
   # objDetectCfg: 
   # objDetectModel:	
   # objDetectLabels:	
@@ -36,23 +36,28 @@ component:
     - 255
     - 0
     - 0
-  showObjectNames:      true
-  motionThreshold:      20
-  motionMinArea:        50
+  showObjectNames:          true
+  motionThreshold:          20
+  motionMinArea:            50
   motionOutlineColor:
     - 255
     - 0
     - 0
+  cacheFolder:              ~/.kenzy/image/faces/unknown
+  filterFacesByObject:      false
 
 device: 
-  video_device:          0
+  video_device:             0
+  image_decay:              1.0
+  image_currency:           0.1
+  image_check_frequency:    0.3
 
 service:
-  enable_upnp:          true
-  service_url:          http://localhost:8080
-  host:                 0.0.0.0
-  port:                 8080
-  enable_ssl:           false
-  ssl_cert_file:        /etc/ssl/cert/snakeoil.crt
-  ssl_key_file:         /etc/ssl/private/snakeoil.key
+  enable_upnp:              true
+  service_url:              http://localhost:8080
+  host:                     0.0.0.0
+  port:                     8080
+  enable_ssl:               false
+  ssl_cert_file:            /etc/ssl/cert/snakeoil.crt
+  ssl_key_file:             /etc/ssl/private/snakeoil.key
 
