--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,3 +9,5 @@ include src/kenzy/skills/TellDateTimeSkill/vocab/en_us/*.*
 include src/kenzy/web/*.*
 include src/kenzy/skills/*/*.py
 include src/kenzy/skills/*/vocab/*/*.*
+include src/kenzy/image/resources/mobilenet_v3/*.*
+include src/kenzy/image/resources/yolov7/*.*
