Cleanup for STT and IMAGE

--- a/setup.cfg
+++ b/setup.cfg
@@ -62,3 +62,6 @@ where = src
 console_scripts =
     kenzy = kenzy:__main__
     kenzy-image = kenzy.image:__main__
+    kenzy-watch = kenzy.image:__main__
+    kenzy-stt = kenzy.stt:__main__
+    kenzy-listen = kenzy.stt:__main__
