--- a/examples/listener.yml
+++ b/examples/listener.yml
@@ -3,19 +3,19 @@ type: kenzy.stt
 device: 
   location:                 Living Room
   group:                    Primary
-  # audio_device:         0
-  audio_channels:       1
-  audio_sample_rate:    16000
-  vad_aggressiveness:   0
-  speech_buffer_padding: 350
-  speech_buffer_size: 50
-  speech_ratio: 0.75
-  speech_model: openai/whisper-tiny.en
+  # audio_device:            0
+  audio_channels:           1
+  audio_sample_rate:        16000
+  vad_aggressiveness:       0
+  speech_buffer_padding:    350
+  speech_buffer_size:       50
+  speech_ratio:             0.75
+  speech_model:             openai/whisper-tiny.en
 
 service:
-  upnp:                 client
-  host:                 0.0.0.0
-  port:                 8080
-  enable_ssl:           false
-  ssl_cert_file:        /etc/ssl/cert/snakeoil.crt
-  ssl_key_file:         /etc/ssl/private/snakeoil.key
+  upnp:                     client
+  host:                     0.0.0.0
+  port:                     8080
+  ssl.enable:               false
+  ssl.cert_file:            /etc/ssl/cert/snakeoil.crt
+  ssl.key_file:             /etc/ssl/private/snakeoil.key
