--- a/examples/watcher.yml
+++ b/examples/watcher.yml
@@ -6,15 +6,20 @@ device:
   video_device:             0
   orientation:              0       # 0, 90, 180, 270
   frames_per_second:        30      # From video device (exclude for FPS auto-detection)
-  motion_threshold:         20      # color change per pixel
-  motion_area:              0.0003  # As a percentage of the entire image
-  object_threshold:         0.6     # Probability as a percentage (higher is more restrictive)
-  face_tolerance:           0.5     # Euclidean distance limit (lower is more restrictive)
-  video_format:             XVID    # Format of saved videos (XVID, MPV4)
-  record_buffer:            5       # Number of seconds to record before and after movement
-  cache_folder:             ~/.kenzy/image/faces/unknown
-  video_folder:             ~/Videos/kenzy
-  faces:
+  motion.threshold:         20      # color change per pixel
+  motion.area:              0.0003  # As a percentage of the entire image
+  object.threshold:         0.6     # Probability as a percentage (higher is more restrictive)
+  object.model_type:        ssd
+  # object.model_config:
+  # object.model_file:
+  # object.label_file:
+  face.tolerance:           0.5     # Euclidean distance limit (lower is more restrictive)
+  face.cache_folder:        ~/.kenzy/image/faces/unknown
+  face.default_name:        Unknown
+  record.format:            XVID    # Format of saved videos (XVID, MPV4)
+  record.buffer:            5       # Number of seconds to record before and after movement
+  record.folder:            ~/Videos/kenzy
+  face.entries:
     lnxusr1:
       - ~/Pictures/faces/lnxusr1/user.1.9.jpg
 
@@ -23,6 +28,6 @@ service:
   # service_url:              http://localhost:8080
   host:                     0.0.0.0
   port:                     8080
-  enable_ssl:               false
-  ssl_cert_file:            /etc/ssl/cert/snakeoil.crt
-  ssl_key_file:             /etc/ssl/private/snakeoil.key
+  ssl.enable:               false
+  ssl.cert_file:            /etc/ssl/cert/snakeoil.crt
+  ssl.key_file:             /etc/ssl/private/snakeoil.key
