Adding shortcuts to TTS

--- a/setup.cfg
+++ b/setup.cfg
@@ -65,3 +65,5 @@ console_scripts =
     kenzy-watch = kenzy.image:__main__
     kenzy-stt = kenzy.stt:__main__
     kenzy-listen = kenzy.stt:__main__
+    kenzy-tts = kenzy.tts:__main__
+    kenzy-speak = kenzy.tts:__main__
