--- a/examples/speaker.yml
+++ b/examples/speaker.yml
@@ -3,11 +3,12 @@ type: kenzy.tts
 device: 
   location:                 Living Room
   group:                    Primary
+  model_target:             cpu
 
 service:
   upnp:                     client
   host:                     0.0.0.0
-  port:                     8081
+  port:                     9702
   ssl.enable:               false
   ssl.cert_file:            /etc/ssl/cert/snakeoil.crt
   ssl.key_file:             /etc/ssl/private/snakeoil.key
