--- a/examples/skillsmanager.yml
+++ b/examples/skillsmanager.yml
@@ -8,6 +8,7 @@ service:
   upnp:                     server
   host:                     0.0.0.0
   port:                     9700
-  ssl.enable:               false
-  ssl.cert_file:            /etc/ssl/cert/snakeoil.crt
-  ssl.key_file:             /etc/ssl/private/snakeoil.key
+  ssl:
+    enable:               false
+    cert_file:            /etc/ssl/cert/snakeoil.crt
+    key_file:             /etc/ssl/private/snakeoil.key
