--- a/examples/watcher.yml
+++ b/examples/watcher.yml
@@ -28,6 +28,7 @@ service:
   # service_url:              http://localhost:8080
   host:                     0.0.0.0
   port:                     8080
-  ssl.enable:               false
-  ssl.cert_file:            /etc/ssl/cert/snakeoil.crt
-  ssl.key_file:             /etc/ssl/private/snakeoil.key
+  ssl:
+    enable:               false
+    cert_file:            /etc/ssl/cert/snakeoil.crt
+    key_file:             /etc/ssl/private/snakeoil.key
