--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,15 +17,15 @@ nav:
       - Audio/Video Extras: 'installation.audio.md'
       - Raspberry Pi Notes: 'installation.raspberrypi.md'
       - Training your Watcher: 'kenzy.watcher.train.md'
-    - Containers:
-      - Creating a Container: 'kenzy.containers.md'
-      - Setting a Startup Configuration: 'kenzy.config.md'
-    - Devices:
+      - Startup Configuration: 'kenzy.config.md'
+    - Containers & Devices:
+      - Skill Manager: 'kenzy.devices.skillmanager.md'
+      - Speech-to-Text: 'kenzy.devices.listener.md'
+      - Text-to-Speech: 'kenzy.devices.speaker.md'
+      - Image/Video Processing: 'kenzy.devices.watcher.md'
+      - Service Settings: 'kenzy.containers.md'
+    - Extending:
       - Creating a Device: 'kenzy.devices.md'
-      - kenzy.devices.Listener: 'kenzy.devices.listener.md'
-      - kenzy.devices.Speaker: 'kenzy.devices.speaker.md'
-      - kenzy.devices.Watcher: 'kenzy.devices.watcher.md'
-    - Skills:
       - Creating a Skill: 'kenzy.skill.md'
     - Communications:
       - Calls to a Container/Device: 'kenzy.communication.md'
