--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -11,3 +11,4 @@ include src/kenzy/skills/*/*.py
 include src/kenzy/skills/*/vocab/*/*.*
 include src/kenzy/image/resources/mobilenet_v3/*.*
 include src/kenzy/image/resources/yolov7/*.*
+include src/kenzy/data/*.*
