--- a/examples/skillsmanager.yml
+++ b/examples/skillsmanager.yml
@@ -5,10 +5,9 @@ device:
   group:                    Primary
 
 service:
-  upnp:                     server
   host:                     0.0.0.0
   port:                     9700
-  ssl:
-    enable:               false
-    cert_file:            /etc/ssl/cert/snakeoil.crt
-    key_file:             /etc/ssl/private/snakeoil.key
+  upnp.type:                server
+  ssl.enable:               false
+  ssl.cert_file:            /etc/ssl/cert/snakeoil.crt
+  ssl.key_file:             /etc/ssl/private/snakeoil.key
