Docs and helpers update

--- a/setup.cfg
+++ b/setup.cfg
@@ -61,9 +61,10 @@ where = src
 [options.entry_points]
 console_scripts =
     kenzy = kenzy:__main__
-    kenzy-image = kenzy.image:__main__
-    kenzy-watch = kenzy.image:__main__
-    kenzy-stt = kenzy.stt:__main__
-    kenzy-listen = kenzy.stt:__main__
-    kenzy-tts = kenzy.tts:__main__
-    kenzy-speak = kenzy.tts:__main__
+    kenzy_image = kenzy.image:__main__
+    kenzy_stt = kenzy.stt:__main__
+    kenzy_tts = kenzy.tts:__main__
+    kenzy_skill = kenzy.skillmanager:__main__
+    kenzy_watch = kenzy.image:__main__
+    kenzy_listen = kenzy.stt:__main__
+    kenzy_speak = kenzy.tts:__main__
