--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,6 +9,9 @@ mkdocs:
   configuration: mkdocs.yml
   
 build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.11"
   image: latest
   apt_packages:
     - python3-fann2
@@ -26,6 +29,6 @@ build:
   
 # Optionally set the version of Python and requirements required to build your docs
 python:
-   version: 3.7
+   version: 3.11
    install:
    - requirements: docs/requirements.txt
