Upgrading dist tools compatibility

--- a/setup.cfg
+++ b/setup.cfg
@@ -68,3 +68,6 @@ console_scripts =
     kenzy_watch = kenzy.image:__main__
     kenzy_listen = kenzy.stt:__main__
     kenzy_speak = kenzy.tts:__main__
+
+[tool.setuptools]
+include-package-data = true
