--- a/setup.cfg
+++ b/setup.cfg
@@ -8,22 +8,22 @@ exclude = tests/*
 [metadata]
 name = kenzy
 author = lnxusr1
-author_email = dist@kenzy.ai
-url = https://kenzy.ai
-download_url = https://kenzy.ai/get/latest/release
+author_email = dist@kenzy.dev
+url = https://kenzy.dev
+download_url = https://kenzy.dev/get/latest/release
 version = attr: src.kenzy.VERSION
 description = Kenzy.Ai: A synthetic human written in Python
 long_description = file: README.rst
 keywords = Artificial Intelligence, AI, Personal Assistant
 license = MIT
-home_page = https://kenzy.ai
+home_page = https://kenzy.dev
 classifiers =
     License :: OSI Approved :: MIT License
     Programming Language :: Python :: 3
     Operating System :: OS Independent
 project_urls = 
-    Bug Tracker = https://kenzy.ai/issues
-    Changelog = https://kenzy.ai/get/latest/changelog
+    Bug Tracker = https://kenzy.dev/issues
+    Changelog = https://kenzy.dev/get/latest/changelog
 
 [build-system]
 requires = 
